# pydantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
ML_sample/: main.py  train_model.py
fastapi_project/: auth.py  database.py  main.py  models.py  test.db
fastapi_project/routers/: background_tasks.py  orders.py  users.py
notebook/: pydantic-discussion.ipynb  pydantic-karthstrial.ipynb  pydantic.ipynb  raw_data.csv  test.db
