[project]
name = "pydantic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pydantic>=2.0.0",
    "ruff>=0.9.7",
]
